fixed p spacing

--- a/src/MiddleSection.css
+++ b/src/MiddleSection.css
@@ -220,6 +220,7 @@
   line-height: 1.5;
   padding-left: 150px;
   padding-right: 150px;
+  padding-top: 50px;
 }
 .projects-h1 {
   padding-top: 100px;
@@ -300,6 +301,7 @@
     font-size: 25px;
     padding-left: 5px;
     padding-right: 5px;
+    padding-top: 20px;
   }
   #projects_page {
     height: 1000px !important;
